--- a/outstanding.html
+++ b/outstanding.html
@@ -627,25 +627,25 @@
 
     <!-- PKK Clear Tab Content -->
     <div id="pkkClearContent" class="tab-content hidden">
-        <div class="w-full px-2 sm:px-4 lg:px-6 py-8">
+        <div class="w-full px-2 sm:px-3 lg:px-4 py-4">
             <!-- Header -->
-            <div class="text-center mb-8">
-                <h2 class="text-3xl font-bold text-gray-900 mb-4">🗑️ PKK Clear Management</h2>
-                <p class="text-gray-600 text-lg">Kelola data PKK yang telah diabaikan</p>
-                <div class="w-24 h-1 bg-gradient-to-r from-red-500 to-orange-500 mx-auto mt-4 rounded-full"></div>
+            <div class="text-center mb-4">
+                <h2 class="text-xl font-bold text-gray-900 mb-2">🗑️ PKK Clear Management</h2>
+                <p class="text-gray-600 text-sm">Kelola data PKK yang telah diabaikan</p>
+                <div class="w-12 h-0.5 bg-gradient-to-r from-red-500 to-orange-500 mx-auto mt-2 rounded-full"></div>
             </div>
 
             <!-- Stats Cards -->
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-6 mb-8">
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-3 mb-4">
                 <!-- Total Ignored Items -->
-                <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-6">
+                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3">
                     <div class="flex items-center justify-between">
                         <div>
-                            <p class="text-sm font-medium text-gray-600">Total PKK Diabaikan</p>
-                            <p id="totalIgnoredCount" class="text-2xl font-bold text-red-600">0</p>
+                            <p class="text-xs font-medium text-gray-600">Total PKK Diabaikan</p>
+                            <p id="totalIgnoredCount" class="text-lg font-bold text-red-600">0</p>
                         </div>
-                        <div class="bg-red-100 rounded-lg p-3">
-                            <svg class="w-6 h-6 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <div class="bg-red-100 rounded-md p-2">
+                            <svg class="w-4 h-4 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 12H4"></path>
                             </svg>
                         </div>
@@ -653,16 +653,16 @@
                 </div>
 
                 <!-- GitHub Storage -->
-                <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-6">
+                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3">
                     <div class="flex items-center justify-between">
                         <div>
-                            <p class="text-sm font-medium text-gray-600">GitHub Storage</p>
-                            <p id="githubCount" class="text-2xl font-bold text-green-600">0</p>
+                            <p class="text-xs font-medium text-gray-600">GitHub Storage</p>
+                            <p id="githubCount" class="text-lg font-bold text-green-600">0</p>
                             <p id="githubStatus" class="text-xs text-gray-500 mt-1">Loading...</p>
                             <p id="githubDebug" class="text-xs text-gray-400 mt-1" style="display: none;"></p>
                         </div>
-                        <div class="bg-green-100 rounded-lg p-3">
-                            <svg class="w-6 h-6 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <div class="bg-green-100 rounded-md p-2">
+                            <svg class="w-4 h-4 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
                             </svg>
                         </div>
@@ -670,15 +670,15 @@
                 </div>
 
                 <!-- Local Browser Storage -->
-                <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-6">
+                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3">
                     <div class="flex items-center justify-between">
                         <div>
-                            <p class="text-sm font-medium text-gray-600">Browser Storage</p>
-                            <p id="localStorageCount" class="text-2xl font-bold text-blue-600">0</p>
+                            <p class="text-xs font-medium text-gray-600">Browser Storage</p>
+                            <p id="localStorageCount" class="text-lg font-bold text-blue-600">0</p>
                             <p class="text-xs text-gray-500 mt-1">localStorage</p>
                         </div>
-                        <div class="bg-blue-100 rounded-lg p-3">
-                            <svg class="w-6 h-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <div class="bg-blue-100 rounded-md p-2">
+                            <svg class="w-4 h-4 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
                             </svg>
                         </div>
@@ -686,18 +686,18 @@
                 </div>
 
                 <!-- Sync Status -->
-                <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-6">
+                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3">
                     <div class="flex items-center justify-between">
                         <div class="flex-1">
-                            <p class="text-sm font-medium text-gray-600">Sync Status</p>
+                            <p class="text-xs font-medium text-gray-600">Sync Status</p>
                             <p id="syncStatusText" class="text-sm font-bold text-gray-600">Loading...</p>
-                            <div class="flex items-center mt-2">
-                                <div id="syncStatusIndicator" class="w-3 h-3 bg-gray-300 rounded-full"></div>
-                                <span class="ml-2 text-xs text-gray-500">Live Status</span>
+                            <div class="flex items-center mt-1">
+                                <div id="syncStatusIndicator" class="w-2 h-2 bg-gray-300 rounded-full"></div>
+                                <span class="ml-1 text-xs text-gray-500">Live Status</span>
                             </div>
                         </div>
-                        <div class="bg-purple-100 rounded-lg p-3">
-                            <svg class="w-6 h-6 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <div class="bg-purple-100 rounded-md p-2">
+                            <svg class="w-4 h-4 text-purple-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
                             </svg>
                         </div>
@@ -834,21 +834,21 @@
             </div>
 
             <!-- Action Buttons -->
-            <div class="flex flex-wrap gap-4 mb-8 justify-center">
-                <button id="refreshIgnoredBtn" class="px-6 py-3 bg-blue-600 text-white rounded-lg font-semibold hover:bg-blue-700 transition-colors flex items-center">
-                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <div class="flex flex-wrap gap-2 mb-4 justify-center">
+                <button id="refreshIgnoredBtn" class="px-3 py-2 bg-blue-600 text-white rounded-md text-sm font-medium hover:bg-blue-700 transition-colors flex items-center">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"></path>
                     </svg>
                     Refresh Data
                 </button>
-                <button id="clearAllIgnoredBtn" class="px-6 py-3 bg-red-600 text-white rounded-lg font-semibold hover:bg-red-700 transition-colors flex items-center">
-                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <button id="clearAllIgnoredBtn" class="px-3 py-2 bg-red-600 text-white rounded-md text-sm font-medium hover:bg-red-700 transition-colors flex items-center">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"></path>
                     </svg>
                     Clear All
                 </button>
-                <button id="exportIgnoredBtn" class="px-6 py-3 bg-green-600 text-white rounded-lg font-semibold hover:bg-green-700 transition-colors flex items-center">
-                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <button id="exportIgnoredBtn" class="px-3 py-2 bg-green-600 text-white rounded-md text-sm font-medium hover:bg-green-700 transition-colors flex items-center">
+                    <svg class="w-4 h-4 mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
                     </svg>
                     Export Data
@@ -856,25 +856,25 @@
             </div>
 
             <!-- Ignored PKK List -->
-            <div class="bg-white rounded-xl shadow-lg border border-gray-100 overflow-hidden">
-                <div class="bg-gray-50 px-6 py-4 border-b border-gray-200">
-                    <h3 class="text-lg font-semibold text-gray-900 flex items-center">
-                        <svg class="w-5 h-5 mr-2 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <div class="bg-white rounded-lg shadow-md border border-gray-100 overflow-hidden">
+                <div class="bg-gray-50 px-4 py-2 border-b border-gray-200">
+                    <h3 class="text-sm font-semibold text-gray-900 flex items-center">
+                        <svg class="w-4 h-4 mr-1 text-red-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"></path>
                         </svg>
                         Daftar PKK yang Diabaikan
                     </h3>
-                    <p class="text-sm text-gray-600 mt-1">Data PKK yang telah ditandai untuk diabaikan</p>
+                    <p class="text-xs text-gray-600 mt-1">Data PKK yang telah ditandai untuk diabaikan</p>
                 </div>
                 
                 <!-- Search and Filter -->
-                <div class="px-6 py-4 bg-gray-50 border-b border-gray-200">
-                    <div class="flex flex-col sm:flex-row gap-4">
+                <div class="px-4 py-2 bg-gray-50 border-b border-gray-200">
+                    <div class="flex flex-col sm:flex-row gap-2">
                         <div class="flex-1">
                             <input type="text" id="searchIgnoredInput" placeholder="Cari PKK Number..." 
-                                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+                                   class="w-full px-3 py-2 text-sm border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
                         </div>
-                        <button id="searchIgnoredBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition-colors">
+                        <button id="searchIgnoredBtn" class="px-3 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
                             <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
                             </svg>
