chore(ui): add Gresik to Jawa mapping; save generated artifacts

--- a/outstanding.html
+++ b/outstanding.html
@@ -3041,7 +3041,7 @@ function renderPelabuhanCards(data) {
             icon: '🌳'
         },
         'Jawa': {
-            keywords: ['jakarta', 'surabaya', 'semarang', 'cirebon', 'tanjung priok', 'tanjung perak', 'cilacap', 'probolinggo', 'jepara', 'pekalongan', 'banten', 'merak', 'tanjung wangi', 'tanjung intan', 'tanjung emas', 'zona tanjung wangi'],
+            keywords: ['zona gresik', 'surabaya', 'semarang', 'cirebon', 'tanjung priok', 'tanjung perak', 'cilacap', 'probolinggo', 'jepara', 'pekalongan', 'banten', 'merak', 'tanjung wangi', 'tanjung intan', 'tanjung emas', 'zona tanjung wangi'],
             color: {bg: "linear-gradient(135deg, #bfdbfe, #93c5fd, #60a5fa)", circle: "rgba(255,255,255,0.15)"}, // Soft blue gradient
             icon: '🏙️'
         },
