--- a/bill.html
+++ b/bill.html
@@ -24,11 +24,11 @@
                         </div>
                     </div>
 
-                    <div class="w-full bg-gray-50 rounded-md p-3 mb-3">
-                        <canvas id="lowPctChart" width="1600" height="350" style="width:100%; height:350px; display:block;"></canvas>
+                    <div class="w-full bg-gray-50 rounded-md p-3 mb-3" style="height:250px;">
+                        <canvas id="lowPctChart" width="1600" height="250" style="width:100%; height:250px; display:block;"></canvas>
                     </div>
 
-                    <div id="lowPctLegend" class="flex flex-wrap gap-2 items-center mt-2"></div>
+                    <div id="lowPctLegend" class="flex flex-wrap gap-2 items-center mt-2 hidden"></div>
                     <div id="lowPctFallback" class="hidden text-sm text-gray-600 mt-2"></div>
                 </div>
             </div>
