--- a/bill.html
+++ b/bill.html
@@ -18,9 +18,9 @@
         <!-- Branch Cards -->
             <div class="mb-8">
                 <div id="lowPctCard" class="mx-auto bg-white rounded-xl p-6 shadow-lg" style="width:1600px; max-width:100%;">
-                    <div class="flex items-center justify-between mb-4">
-                        <div>
-                            <h3 class="text-lg font-semibold text-gray-900">Persentase 0 - &lt;1 Hari per Cabang</h3>
+                    <div class="flex items-center justify-center mb-4">
+                        <div class="w-full text-center">
+                            <h3 class="text-lg font-semibold text-gray-900">Grafik Persentase Terbit Nota dibawah 1 Hari</h3>
                         </div>
                     </div>
 
