Add nomor_spb column to table in tabel tab

--- a/outstanding.html
+++ b/outstanding.html
@@ -1624,7 +1624,8 @@
                 'loa',
                 'departure_date',
                 'ZONA',
-                'name_branch'
+                'name_branch',
+                'nomor_spb'
             ];
 
             // Helper: find best matching header from CSV headers (case-insensitive)
