--- a/outstanding.html
+++ b/outstanding.html
@@ -5095,7 +5095,7 @@ function renderPelabuhanCards(data) {
                 <!-- Header with Outstanding Button -->
                 <div class="bg-gradient-to-r from-blue-600 to-blue-700 px-6 py-4">
                     <div class="flex justify-between items-center">
-                        <h2 class="text-xl font-semibold text-white">📊 Laporan Harian (KSOP)</h2>
+                        <h2 class="text-xl font-semibold text-white">📊 Laporan Harian Gerakan Kapal</h2>
                         <a href="outstanding.html"
                            class="inline-flex items-center px-4 py-2 bg-white/20 hover:bg-white/30 text-white rounded-lg transition-colors duration-200 backdrop-blur-sm">
                             <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
