--- a/outstanding.html
+++ b/outstanding.html
@@ -4271,9 +4271,10 @@ function renderPelabuhanCards(data) {
             const pelabuhanEl = document.getElementById('modalPelabuhan');
             let portName = '';
             if (rowData) {
-                portName = rowData.PELABUHAN || rowData.pelabuhan || rowData.name_branch || '';
+                // Prefer name_branch per request
+                portName = rowData.name_branch || rowData.PELABUHAN || rowData.pelabuhan || '';
             }
-            if (pelabuhanEl) pelabuhanEl.value = portName;
+            if (pelabuhanEl) pelabuhanEl.textContent = portName || '-';
 
             // Set modal timestamp to current ISO string
             const modalTimestamp = document.getElementById('modalTimestamp');
@@ -4353,7 +4354,7 @@ function renderPelabuhanCards(data) {
             const reasonData = {
                 reason: finalReason,
                 notes: additionalNotes.value.trim(),
-                pelabuhan: (pelabuhanInput && pelabuhanInput.value) ? pelabuhanInput.value.trim() : (currentAbaiData && currentAbaiData.rowData ? (currentAbaiData.rowData.PELABUHAN || currentAbaiData.rowData.pelabuhan || '') : ''),
+                pelabuhan: (pelabuhanInput && pelabuhanInput.textContent) ? pelabuhanInput.textContent.trim() : (currentAbaiData && currentAbaiData.rowData ? (currentAbaiData.rowData.name_branch || currentAbaiData.rowData.PELABUHAN || currentAbaiData.rowData.pelabuhan || '') : ''),
                 timestamp: (timestampInput && timestampInput.value) ? timestampInput.value : new Date().toISOString()
             };
 
@@ -4824,10 +4825,10 @@ function renderPelabuhanCards(data) {
                     <p id="modalPkkNumber" class="font-medium text-gray-900"></p>
                 </div>
 
-                <!-- Pelabuhan Info -->
+                <!-- Pelabuhan Info (read-only, sourced from rowData.name_branch) -->
                 <div class="mb-4">
                     <label class="block text-sm font-medium text-gray-700 mb-2">Pelabuhan:</label>
-                    <input id="modalPelabuhan" type="text" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Nama pelabuhan (jika tersedia)">
+                    <p id="modalPelabuhan" class="w-full px-3 py-2 border border-gray-200 rounded-md bg-gray-50 text-sm text-gray-700">-</p>
                 </div>
 
                 <!-- Timestamp (read-only) -->
