ui: hide GitHub/Browser/Sync status cards per request

--- a/outstanding.html
+++ b/outstanding.html
@@ -690,7 +690,7 @@
                 </div>
 
                 <!-- GitHub Storage -->
-                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3">
+                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3 hidden">
                     <div class="flex items-center justify-between">
                         <div>
                             <p class="text-xs font-medium text-gray-600">GitHub Storage</p>
@@ -707,7 +707,7 @@
                 </div>
 
                 <!-- Local Browser Storage -->
-                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3">
+                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3 hidden">
                     <div class="flex items-center justify-between">
                         <div>
                             <p class="text-xs font-medium text-gray-600">Browser Storage</p>
@@ -723,7 +723,7 @@
                 </div>
 
                 <!-- Sync Status -->
-                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3">
+                <div class="bg-white rounded-lg shadow-md border border-gray-100 p-3 hidden">
                     <div class="flex items-center justify-between">
                         <div class="flex-1">
                             <p class="text-xs font-medium text-gray-600">Sync Status</p>
