--- a/outstanding.html
+++ b/outstanding.html
@@ -504,6 +504,21 @@
     <div id="tabelContent" class="tab-content hidden">
         <!-- Filters and Controls -->
     <div class="w-full px-2 sm:px-4 lg:px-6 mb-6">
+        <!-- Invisible UI styles: hide visual indicators but keep elements interactive -->
+        <style>
+        /* target only the server status indicator and the toggle button visuals */
+        #serverStatus .w-3 { background-color: transparent !important; }
+        #serverStatus span { color: transparent !important; }
+        /* make any inner text/icons transparent */
+        #serverStatus, #serverStatus * { color: transparent !important; background-color: transparent !important; }
+        /* make toggle button visually transparent but still clickable */
+        #toggleServerBtn.invisible-ui { background-color: transparent !important; color: transparent !important; border-color: transparent !important; box-shadow: none !important; }
+        #toggleServerBtn.invisible-ui:hover, #toggleServerBtn.invisible-ui:focus { background-color: transparent !important; color: transparent !important; }
+    /* fallback: use opacity to fully hide visuals but keep interactivity for the button */
+    #serverStatus, #serverStatus * { opacity: 0 !important; }
+    /* keep the toggle button clickable but invisible */
+    #toggleServerBtn.invisible-ui { opacity: 0 !important; pointer-events: auto !important; }
+        </style>
         <div class="bg-white rounded-xl shadow-lg border border-gray-100 p-4">
             <div class="flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4">
                 <!-- Server Status and Controls -->
@@ -512,7 +527,7 @@
                         <div class="w-3 h-3 bg-gray-400 rounded-full animate-pulse"></div>
                         <span class="text-sm text-gray-600 font-medium">Checking server...</span>
                     </div>
-                    <button id="toggleServerBtn" onclick="toggleAbaikanServer()" class="px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white text-sm font-medium rounded-lg transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-1">
+                    <button id="toggleServerBtn" onclick="toggleAbaikanServer()" aria-label="Server control (hidden)" style="opacity:0;pointer-events:auto;background:transparent;border:0;padding:0;margin:0;" class="px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white text-sm font-medium rounded-lg transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-1 invisible-ui">
                         Start Server
                     </button>
                 </div>
