--- a/outstanding.html
+++ b/outstanding.html
@@ -4972,9 +4972,9 @@ function renderPelabuhanCards(data) {
                                    class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200">
                         </div>
                         <div>
-                            <label class="block text-sm font-medium text-gray-700 mb-1">Wilayah</label>
+                            <label class="block text-sm font-medium text-gray-700 mb-1">Area</label>
                             <select id="laporanWilayahFilter" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-all duration-200">
-                                <option value="">Semua Wilayah</option>
+                                <option value="">Semua Area</option>
                                 <option value="kalimantan">Kalimantan</option>
                                 <option value="jawa">Jawa</option>
                                 <option value="bali-nusatenggara">Bali Nusatenggara</option>
